--- a/package.json
+++ b/package.json
@@ -35,31 +35,28 @@
     "url": "https://github.com/jkuri/ng2-datepicker/issues"
   },
   "homepage": "https://github.com/jkuri/ng2-datepicker#readme",
-  "main": "./lib-dist/ng2-datepicker.module.js",
-  "module": "./lib-dist/ng2-datepicker.module.js",
-  "types": "./lib-dist/ng2-datepicker.module.d.ts",
+  "main": "./ng2-datepicker.module.ts",
+  "module": "./ng2-datepicker.module.ts",
   "peerDependencies": {
-    "@angular/common": ">=2.0.0 <5.0.0 || >=4.0.0-beta <5.0.0",
-    "@angular/core": ">=2.0.0 <5.0.0 || >=4.0.0-beta <5.0.0",
-    "@angular/forms": "^2.4.0",
-    "rxjs": ">=5.0.0 || >=5.0.0-beta",
-    "zone.js": ">=0.7.0"
+    "@angular/forms": "^4.2.6",
+    "@angular/common": "^4.2.6",
+    "@angular/compiler": "^4.2.6",
+    "@angular/compiler-cli": "^4.2.6",
+    "@angular/core": "^4.2.6",
+    "@angular/http": "^4.2.6",
+    "@angular/platform-browser": "^4.2.6",
+    "@angular/platform-browser-dynamic": "^4.2.6",
+    "@angular/router": "^4.2.6",
+    "rimraf": "^2.6.1",
+    "rxjs": "^5.4.2",
+    "zone.js": "^0.8.4"
   },
   "dependencies": {
-    "moment": "^2.17.1",
-    "ng2-slimscroll": "^1.2.6"
+    "moment": "^2.18.1",
+    "ng2-slimscroll": "^2.0.1"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.0-rc.0",
-    "@angular/common": "^2.4.0",
-    "@angular/compiler": "^2.4.0",
-    "@angular/compiler-cli": "^2.4.0",
-    "@angular/core": "^2.4.0",
-    "@angular/forms": "^2.4.0",
-    "@angular/http": "^2.4.0",
-    "@angular/platform-browser": "^2.4.0",
-    "@angular/platform-browser-dynamic": "^2.4.0",
-    "@angular/router": "^3.4.0",
+    "@angular/cli": "^1.2.0",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
     "angular-library-builder": "^1.3.1",
@@ -75,11 +72,8 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.0",
-    "rimraf": "^2.6.1",
-    "rxjs": "^5.1.0",
     "ts-node": "~2.0.0",
-    "tslint": "~4.4.2",
-    "typescript": "~2.0.0",
-    "zone.js": "^0.7.6"
+    "tslint": "~4.5.0",
+    "typescript": "^2.4.0"
   }
 }
